; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdiplus/extr_image.c_test_dispose.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdiplus/extr_image.c_test_dispose.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@InvalidParameter = common dso_local global i32 0, align 4
@PixelFormat32bppARGB = common dso_local global i32 0, align 4
@Ok = common dso_local global i32 0, align 4
@ObjectBusy = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_dispose to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_dispose() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = alloca [256 x i8], align 16
  %4 = call i32 @GdipDisposeImage(i32* null)
  store i32 %4, i32* %1, align 4
  %5 = load i32, i32* @InvalidParameter, align 4
  %6 = load i32, i32* %1, align 4
  %7 = call i32 @expect(i32 %5, i32 %6)
  %8 = load i32, i32* @PixelFormat32bppARGB, align 4
  %9 = call i32 @GdipCreateBitmapFromScan0(i32 2, i32 2, i32 0, i32 %8, i32* null, i32** %2)
  store i32 %9, i32* %1, align 4
  %10 = load i32, i32* @Ok, align 4
  %11 = load i32, i32* %1, align 4
  %12 = call i32 @expect(i32 %10, i32 %11)
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @GdipDisposeImage(i32* %13)
  store i32 %14, i32* %1, align 4
  %15 = load i32, i32* @Ok, align 4
  %16 = load i32, i32* %1, align 4
  %17 = call i32 @expect(i32 %15, i32 %16)
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @GdipDisposeImage(i32* %18)
  store i32 %19, i32* %1, align 4
  %20 = load i32, i32* @ObjectBusy, align 4
  %21 = load i32, i32* %1, align 4
  %22 = call i32 @expect(i32 %20, i32 %21)
  %23 = getelementptr inbounds [256 x i8], [256 x i8]* %3, i64 0, i64 0
  %24 = call i32 @memset(i8* %23, i32 0, i32 256)
  %25 = getelementptr inbounds [256 x i8], [256 x i8]* %3, i64 0, i64 0
  %26 = bitcast i8* %25 to i32*
  %27 = call i32 @GdipDisposeImage(i32* %26)
  store i32 %27, i32* %1, align 4
  %28 = load i32, i32* @ObjectBusy, align 4
  %29 = load i32, i32* %1, align 4
  %30 = call i32 @expect(i32 %28, i32 %29)
  ret void
}

declare dso_local i32 @GdipDisposeImage(i32*) #1

declare dso_local i32 @expect(i32, i32) #1

declare dso_local i32 @GdipCreateBitmapFromScan0(i32, i32, i32, i32, i32*, i32**) #1

declare dso_local i32 @memset(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
